update with capactior capabilties

--- a/src/app/tabs-page/tab1/tab1.page.html
+++ b/src/app/tabs-page/tab1/tab1.page.html
@@ -13,5 +13,15 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Horde"></app-explore-container>
+  <ion-card>
+    <img src="./madison.jpg" />
+    <ion-card-header>
+      <ion-card-subtitle>Horde</ion-card-subtitle>
+      <ion-card-title>Garrosh Hellscream</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Founded in 1829 on an isthmus between Lake Monona and Lake Mendota,
+      Madison was named the capital of the Wisconsin Territory in 1836.
+    </ion-card-content>
+  </ion-card>
 </ion-content>
