--- a/src/app/tabs-page/tab1/tab1.page.html
+++ b/src/app/tabs-page/tab1/tab1.page.html
@@ -13,15 +13,15 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-card>
-    <img src="./madison.jpg" />
+  <ion-card ngFor="let hero of hordeHeroes">
+    <img [src]="hero.image" />
+
     <ion-card-header>
-      <ion-card-subtitle>Horde</ion-card-subtitle>
-      <ion-card-title>Garrosh Hellscream</ion-card-title>
+      <ion-card-subtitle>{{hero.faction}}</ion-card-subtitle>
+      <ion-card-title>{{hero.name}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      Founded in 1829 on an isthmus between Lake Monona and Lake Mendota,
-      Madison was named the capital of the Wisconsin Territory in 1836.
+      {{hero.description}}
     </ion-card-content>
   </ion-card>
 </ion-content>
