--- a/src/app/card/hero-card/hero-card.component.html
+++ b/src/app/card/hero-card/hero-card.component.html
@@ -1,5 +1,5 @@
 <ion-card>
-  <img [src]="hero.image" />
+  <img [src]="hero.imageUrl" />
 
   <ion-card-header>
     <ion-card-subtitle>{{ hero.faction }}</ion-card-subtitle>
