--- a/src/app/tabs-page/tab3/tab3.page.html
+++ b/src/app/tabs-page/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Other
+      {{this.faction}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Other</ion-title>
+      <ion-title size="large">{{this.faction}}</ion-title>
     </ion-toolbar>
   </ion-header>
+  <app-hero-card
+    *ngFor="let hero of heroes"
+    [hero]="hero"
+    [faction]="faction"
+  ></app-hero-card>
 </ion-content>
